# phold

./: .gitignore  .readthedocs.yaml  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  README.md  environment.yml  justfile  mkdocs.yml  pyproject.toml  run_pharokka_and_phold.ipynb  run_pharokka_and_phold_and_phynteny.ipynb  run_phold.ipynb
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_container.yaml  ci.yaml  hpci_pipeline.yml  release.yaml
ci/: hpci.slurm
container/hpci/: Dockerfile
docs/: citation.md  index.md  install.md  install_intel_xpu.md  method.md  output.md  requirements.txt  run.md  tutorial.md
scripts/: create_envhog_foldseek_db.sh  create_phrog_foldseek_db.sh  create_phrog_foldseek_db_from_pdbs.sh  fasta_header_prefix_grep.py  pdb_dir_to_aa.py  phold_colabfold.sh
src/phold/: __init__.py
src/phold/cnn/cnn_chkpnt_finetune/: phold_db_model.pth  vanilla_model.pth
src/phold/databases/: db.py
src/phold/features/: autotune.py  create_foldseek_db.py  eat.py  predict_3Di.py  predict_3Di_finetune.py  profiles.py  query_remote_3Di.py  run_foldseek.py  split_3Di.py  tophits.py
src/phold/io/: handle_genbank.py  handle_protein_faa.py  sub_db_outputs.py  validate_input.py
src/phold/plot/: plot.py
src/phold/results/: distribution.py  topfunction.py  tophit.py
src/phold/subcommands/: compare.py  predict.py
src/phold/utils/: CITATION  constants.py  external_tools.py  util.py  validation.py
tests/: compare_outputs.py  conftest.py  run_comparison.sh  test_integration.py
tests/test_data/: KF623293.1_subset_efam.fasta  NC_043029.gbk  NC_043029_bakta.gbk  NC_043029_ncbi.gbk  NC_043029_pharokka1.4.1.gbk  NC_043029_phold_output.gbk  OM418625_w_pseudo.gbk  OY726582_w_no_product.gbk  SAOMS1.gbk  WP_006719989_subset_test.fasta  colon.fasta  colon.gbk  combined_truncated_acr_defense_vfdb_card.fasta  combined_truncated_acr_defense_vfdb_card.gbk  long_header.fasta  long_header.gbk  phanotate.faa  pharokka.gbk  pharokka_small.gbk  pipe.fasta  pipe_pharokka.gbk  viji_phage.gbk
tests/test_data/NC_043029_af3_cif/: NC_043029_CDS_0001.cif  NC_043029_CDS_0002.cif  NC_043029_CDS_0003.cif  NC_043029_CDS_0004.cif  NC_043029_CDS_0005.cif  NC_043029_CDS_0006.cif  NC_043029_CDS_0007.cif  NC_043029_CDS_0008.cif  NC_043029_CDS_0009.cif  NC_043029_CDS_0010.cif  NC_043029_CDS_0011.cif  NC_043029_CDS_0012.cif  NC_043029_CDS_0013.cif  NC_043029_CDS_0014.cif  NC_043029_CDS_0015.cif
tests/test_data/NC_043029_intermediate_output_proteins/foldseek_db/: phold_h  phold_ss
tests/test_data/NC_043029_intermediate_output_proteins/logs/: foldseek_2892c7b6f4f204bf2725f365570720f54df3eac42e4819edfc0b3193513bded2.err  foldseek_65209b1f66ee39bee2f98278f251224b1296f83f65a5b5381f3c15d413a1699b.err  foldseek_65209b1f66ee39bee2f98278f251224b1296f83f65a5b5381f3c15d413a1699b.out
tests/test_data/NC_043029_intermediate_output_proteins/result_db/: result_db.2
tests/test_data/NC_043029_intermediate_output_restart_compare/: foldseek_results.tsv  phold_prostT5_3di_all_probabilities.json
tests/test_data/NC_043029_intermediate_output_restart_compare/foldseek_db/: phold  phold_h  phold_h.index
tests/test_data/NC_043029_intermediate_output_restart_compare/logs/: foldseek_04db9b85199ac60f2445e481de5b5566fcc70e4cb9e58b4df2e16064dcadb9b9.err  foldseek_04db9b85199ac60f2445e481de5b5566fcc70e4cb9e58b4df2e16064dcadb9b9.out  foldseek_791cfdd6c1ab0b846909336d8e9b769e1a87ac074ca01967bbfdc31b790daeda.out
tests/test_data/NC_043029_intermediate_output_restart_compare/result_db/: result_db.5  result_db.6  result_db.index
tests/test_data/NC_043029_intermediate_output_restart_proteins/: foldseek_results.tsv  phold_aa.fasta
tests/test_data/NC_043029_intermediate_output_restart_proteins/foldseek_db/: phold  phold_h.index  phold_ss.index
tests/test_data/NC_043029_intermediate_output_restart_proteins/logs/: foldseek_2892c7b6f4f204bf2725f365570720f54df3eac42e4819edfc0b3193513bded2.out  foldseek_29aa66c9fb52717487175b6873a651d389d3df834bd57b6f40d9f53e83409e86.err  foldseek_29aa66c9fb52717487175b6873a651d389d3df834bd57b6f40d9f53e83409e86.out  foldseek_777cfad43596a9a0ee87c0c5c4cf568d555221eba354ad8e895ccb78fe53992e.err  foldseek_777cfad43596a9a0ee87c0c5c4cf568d555221eba354ad8e895ccb78fe53992e.out  foldseek_90341afc0dc990e8017a0480bd10105491b2f25d5c20f88d4ff102855ea20641.err  foldseek_90341afc0dc990e8017a0480bd10105491b2f25d5c20f88d4ff102855ea20641.out
tests/test_data/NC_043029_intermediate_output_restart_proteins/result_db/: result_db.0  result_db.1  result_db.3  result_db.4  result_db.5  result_db.6  result_db.7  result_db.index
tests/test_data/NC_043029_intermediate_output_restart_proteins/temp_db/: latest
tests/test_data/NC_043029_intermediate_output_restart_run/: phold_3di.fasta  phold_prostT5_3di_mean_probabilities.csv
tests/test_data/NC_043029_intermediate_output_restart_run/foldseek_db/: phold_ss  phold_ss.index
tests/test_data/NC_043029_intermediate_output_restart_run/logs/: foldseek_37d5cdc60687a1cedf114d3f53905f4c08c7e1281e9b69adf3467c58e79f5fc5.err  foldseek_37d5cdc60687a1cedf114d3f53905f4c08c7e1281e9b69adf3467c58e79f5fc5.out  foldseek_6199211ca3102ec2075ed1c39aacf99876ca6021ec99488afcf7d89a0c0fdf0b.err  foldseek_6199211ca3102ec2075ed1c39aacf99876ca6021ec99488afcf7d89a0c0fdf0b.out  (+3 more)
tests/test_data/dummy_custom_db/: dummy_db.index  dummy_db.lookup  dummy_db_ca  dummy_db_ca.dbtype  dummy_db_ca.index  dummy_db_gpu  dummy_db_gpu.index  dummy_db_gpu.lookup  dummy_db_gpu.source  dummy_db_gpu_ca  dummy_db_gpu_ca.index  dummy_db_gpu_h  dummy_db_gpu_h.index  dummy_db_gpu_ss  dummy_db_gpu_ss.index  dummy_db_gpu_ss.lookup  dummy_db_gpu_ss_h  dummy_db_gpu_ss_h.index  dummy_db_ss
tests/test_data/golden/: README.md
tests/unit/: conftest.py  test_compare.py  test_sub_db_outputs.py  test_topfunction.py
tests/unit/fixtures/: foldseek_all_hypothetical.tsv  foldseek_basic.tsv  foldseek_phrog_prefixes.tsv  foldseek_pipe_in_query.tsv  foldseek_vfdb_card_filter.tsv  qcov_tcov_input.parquet  sub_db_outputs_input_no_subdbs.parquet  sub_db_outputs_input_with_all_subdbs.parquet
(+182 files in other folders)
