[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "phold"
version = "1.3.0" # change VERSION too
description = "Phage Annotations using Protein Structures"
readme = "README.md"
requires-python = ">=3.8, <4"
license = {file = "MIT"}
authors = [
    {name = "George Bouras", email = "george.bouras@adelaide.edu.au"}
]
keywords = ["keyword", "are", "cool"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

dependencies = [
        "click >=8.0.0",
        "loguru >=0.5.3",
        "pyyaml >=6.0",
        "polars >=1.0",
        "biopython >=1.80",
        "datasets >=2.15",
        "requests >=2.25",
        "sentencepiece >=0.1.99",
        "protobuf >=6.0",
        "transformers >=4.34",
        "torch >=2.1.2",
        "pyrodigal-gv >=0.3.1",
        "pyarrow >=14.0.0",
        "alive-progress >=3.0.1",
        # numpy Loosened from `>=2.0` to `>=1.24` so Docker base images that ship
        # numpy 1.26.x via Debian (e.g. pawsey/pytorch:2.7.1-rocm6.3.3)
        # don't trigger pip's "Cannot uninstall numpy: RECORD file not
        # found" error — those installs have no pip metadata so pip can't
        # safely replace them with a 2.x build. phold only uses the stable
        # numeric API (np.quantile/where/max/abs), which has been in numpy
        # since 1.20; 1.24 (Dec 2022) is a comfortable floor for the rest
        # of the dep tree (polars, pyarrow, pandas, torch).
        "numpy >=1.24",
        "pycirclize >=0.3.1",
        "h5py >=3.5",
        "tqdm >=4.35.0",
        "pholdlib >=0.1.0"
    ]

[project.scripts]
phold = 'phold:main'

[project.urls]
"Homepage" = "https://github.com/gbouras13/phold"
"Documentation" = "https://phold.readthedocs.io/en/latest"


[project.optional-dependencies]
lint = [
    "isort",
    "black"
]
test = [
    "pytest>=6.2.5",
    "pytest-cov >=3.0.0",
    "pytest-snapshot >=0.9",
    "polars >=1.0",
]
exe = [
    "setuptools",
    "wheel",
    "build",
]

[tool.setuptools]
include-package-data = true
zip-safe = true  # This just means it's safe to zip up the bdist

[tool.setuptools.package-data]
phold = ["features/autotune_data/*.fasta.gz"]

